--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "portfolio-site",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-fontawesome": "^1.6.1",
+    "react-ga": "^2.2.0",
+    "react-router-dom": "^4.1.1",
     "tachyons": "^4.7.4",
     "tachyons-cli": "^1.0.11"
   },
