--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "portfolio-site",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-fontawesome": "^1.6.1",
-    "react-ga": "^2.2.0",
-    "react-helmet": "^4.0.0",
-    "react-router-dom": "^4.1.1",
-    "react-snapshot": "^1.1.0",
-    "tachyons": "^4.7.4",
-    "tachyons-cli": "^1.0.11"
+    "@fortawesome/fontawesome": "^1.1.5",
+    "@fortawesome/fontawesome-free-brands": "^5.0.9",
+    "@fortawesome/fontawesome-free-solid": "^5.0.9",
+    "@fortawesome/react-fontawesome": "0.0.18",
+    "d3-collection": "^1.0.4",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
+    "react-ga": "^2.4.1",
+    "react-helmet": "^5.2.0",
+    "react-lazy-load": "^3.0.13",
+    "react-router-dom": "^4.2.2",
+    "react-snapshot": "^1.3.0",
+    "tachyons": "^4.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,6 +27,7 @@
     "prebuild": "npm run css"
   },
   "devDependencies": {
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.1.4",
+    "tachyons-cli": "^1.3.0"
   }
 }
