--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
   "name": "portfolio-site",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.5",
-    "@fortawesome/fontawesome-free-brands": "^5.0.9",
-    "@fortawesome/fontawesome-free-solid": "^5.0.9",
-    "@fortawesome/react-fontawesome": "0.0.18",
-    "d3-collection": "^1.0.4",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-ga": "^2.4.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-brands-svg-icons": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "d3-collection": "^1.0.7",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-ga": "^2.5.3",
     "react-helmet": "^5.2.0",
     "react-lazy-load": "^3.0.13",
-    "react-router-dom": "^4.2.2",
-    "react-snapshot": "^1.3.0",
-    "tachyons": "^4.9.1"
+    "react-router-dom": "^4.3.1",
+    "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && react-snapshot",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "css": "tachyons src/css/app.css > src/index.css --minify",
-    "prestart": "npm run css",
-    "prebuild": "npm run css"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-scripts": "1.1.4",
-    "tachyons-cli": "^1.3.0"
-  }
+    "react-scripts": "2.1.1",
+    "react-snapshot": "^1.3.0"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not ie <= 11"
+  ]
 }
