--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^2.1.37",
     "gatsby-image": "^2.0.34",
     "gatsby-plugin-google-analytics": "^2.0.17",
+    "gatsby-plugin-layout": "^1.0.13",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-postcss": "^2.0.7",
     "gatsby-plugin-purgecss": "^3.1.0",
@@ -33,6 +34,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "react-transition-group": "^2.6.1",
     "tachyons": "^4.11.1"
   },
   "devDependencies": {
