--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,5 +1,15 @@
 [
   {
+    "title": "An Illustrated Guide to the NRA’s Lavish Spending and Cozy Deals",
+    "category": "The Trace",
+    "date": "May 2019",
+    "image": { "src": "../img/nra-guide.png" },
+    "alt": "A flowchart .",
+    "role": "Words and graphics",
+    "info": "I wrote and designed this visual explainer of financial misconduct within the NRA (which includes overbilling by vendors, huge executive compensation packages, and outrageously expensive suits). I also created the photo illustration.",
+    "url": "https://www.thetrace.org/2019/05/nra-ackerman-lapierre-financial-misconduct-guide/"
+  },
+  {
     "title": "A Guide to Every Known Investigation of the NRA",
     "category": "The Trace",
     "date": "February 2019 – present",
