--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,11 +1,21 @@
 [
   {
+    "title": "Where the 2020 Democratic Candidates Stand on Guns",
+    "category": "The Trace",
+    "date": "June 2019",
+    "image": { "src": "../img/candidate-guide.png" },
+    "alt": "A chart of 2020 Democratic candidates' stances on gun licensing.",
+    "role": "Words & interactive",
+    "info": "The 2020 Democratic race is crowded with both candidates and <a href='https://www.washingtonpost.com/graphics/politics/policy-2020/'>policy</a> <a href='https://www.politico.com/2020-election/candidates-views-on-the-issues/'>explainers</a>. I led The Trace&rsquo;s effort to fill in the gaps on gun issues, reaching out to the campaigns with a questionnaire of 11 key policy topics and working with my colleagues to research answers for the candidates who didn&rsquo;t respond. I built the guide with Svelte, taking advantage of its <a href='https://svelte.dev/docs#Server-side_component_API'>SSR</a> capabilities to produce a static HTML project page, and spent many joyful hours cutting out the candidates&rsquo; heads in Photoshop.",
+    "url": "https://www.thetrace.org/2019/06/democratic-candidates-2020-gun-policy/"
+  },
+  {
     "title": "An Illustrated Guide to the NRA’s Lavish Spending and Cozy Deals",
     "category": "The Trace",
     "date": "May 2019",
     "image": { "src": "../img/nra-guide.png" },
-    "alt": "A flowchart .",
-    "role": "Words and graphics",
+    "alt": "A flowchart showing Wayne and Susan LaPierre's relationship with the NRA and a charity.",
+    "role": "Words & graphics",
     "info": "I wrote and designed this visual explainer of financial misconduct within the NRA (which includes overbilling by vendors, huge executive compensation packages, and outrageously expensive suits). I also created the photo illustration.",
     "url": "https://www.thetrace.org/2019/05/nra-ackerman-lapierre-financial-misconduct-guide/"
   },
@@ -15,7 +25,7 @@
     "date": "February 2019 – present",
     "image": { "src": "../img/nra-investigations.png" },
     "alt": "A chart summarizing a senate investigation of the NRA.",
-    "role": "Words and graphics",
+    "role": "Words & graphics",
     "info": "State and federal investigations of the NRA have been piling up over the past year, including a <a href='https://www.thetrace.org/2019/02/nra-congressional-inquiry-illegal-coordination/'>few</a> <a href='https://www.thetrace.org/rounds/new-york-opens-investigation-into-nra-tax-exempt-status/'>spurred</a> <a href='https://www.thetrace.org/2019/05/democratic-senators-probe-nra-marketing-firm-over-self-dealing/'>by</a> The Trace&rsquo;s reporting. To make sense of the many threads of these probes, I created a single-page chart to track them all, drawing inspiration from a number of <a href='https://www.washingtonpost.com/graphics/national/trump-russia-investigations/?utm_term=.4c3e76dd0e63'>other</a> <a href='https://www.nytimes.com/interactive/2018/08/21/us/mueller-trump-charges.html'>projects</a> created to keep tabs on a different high-profile subject of many investigations. I&rsquo;ve kept the page updated as new developments emerge.",
     "url": "https://www.thetrace.org/2019/02/nra-investigations-russia-campaign-finance/"
   },
@@ -35,7 +45,7 @@
     "date": "February 2019",
     "image": { "src": "../img/since-parkland.png" },
     "alt": "Since Parkland project homepage.",
-    "role": "Data and design",
+    "role": "Data & design",
     "info": "This project, which tells the stories of more than a thousand children killed by gun violence, was a huge collaboration between The Trace, The Miami Herald/McClatchy, and more than 200 student journalists, with a standalone website built by <a href='https://www.upstatement.com/'>Upstatement</a>. I worked closely with the Upstatement team and fellow Trace staff to conceive the design and functionality of the project site — my contributions included key features such as the category-driven navigation and star motifs. I also coordinated a team-wide push to prepare the site&rsquo;s content for production using Google Docs and <a href='https://airtable.com/'>AirTable</a>.",
     "url": "https://sinceparkland.org"
   },
@@ -45,7 +55,7 @@
     "date": "February 2019",
     "image": { "src": "../img/atf-trace-map.png" },
     "alt": "Map of arrows representing the volume of guns traced between states.",
-    "role": "Data and graphics",
+    "role": "Data & graphics",
     "info": "I worked with reporter Brian Freskos and The New Yorker&rsquo;s digital team to create two Mapbox maps for this multimedia feature built in React. The first illustrates <a href='https://www.atf.gov/resource-center/firearms-trace-data-2017'>ATF crime gun traces</a> by connecting states with swoopy arrows, which were drawn with <a href='http://turfjs.org/'>Turf.js</a> and baked out to GeoJSON files. The second uses a scroll-driven flyover to explore the locations where several dozen stolen guns were recovered.",
     "url": "https://www.thetrace.org/features/gun-store-theft-trafficking-atf/"
   },
@@ -75,7 +85,7 @@
     "date": "October 2018",
     "image": { "src": "../img/cdc-injury-estimates.png" },
     "alt": "Chart comparing CDC firearm injury trends with two other pubic health databases.",
-    "role": "Words and data",
+    "role": "Words & data",
     "info": "<a href='https://twitter.com/sean_kev'>Sean Campbell</a> and I teamed up with FiveThirtyEight&rsquo;s quantitative editor <a href='https://twitter.com/quantmai'>Mai Nguyen</a> to investigate the flawed approach used by the CDC to generate estimates of nonfatal firearm injuries. We developed a methodology for comparing the trends indicated by the CDC&rsquo;s data with those in other public health datasets, and found that the high degree of uncertainty around the CDC&rsquo;s estimates had serious implications for public health research in the United States. This article and its <a href='https://www.thetrace.org/2019/03/cdc-nonfatal-gun-injuries-update/'>follow-up</a> prompted a group of senators to <a href='https://www.thetrace.org/rounds/senators-cdc-gun-injuries-letter/'>demand answers</a> from the Secretary of Health and Human Services about the CDC&rsquo;s data quality issues.",
     "url": "https://www.thetrace.org/2018/10/cdc-nonfatal-gun-injury-data-estimate-problems/"
   },
@@ -104,7 +114,7 @@
     "category": "The Trace / EW Scripps",
     "date": "March 2018",
     "image": { "src": "../img/lie-and-try.jpg" },
-    "role": "Words and data",
+    "role": "Words & data",
     "alt": "Photo illustration of a gun and a background check form.",
     "info": "I partnered with Scripps reporter <a href='https://twitter.com/KatieLaGrone'>Katie LaGrone</a> to investigate a little-known loophole in Florida&rsquo;s firearm backround check system that prevents the state from prosecuting buyers for lying about their criminal histories. In addition to the article, a televised segment based on our reporting aired on three Scripps-owned stations in south Florida.",
     "url": "https://www.thetrace.org/2018/03/florida-lie-and-try-loophole-background-check-denials/"
@@ -114,7 +124,7 @@
     "category": "The Trace",
     "date": "February 2018",
     "image": { "src": "../img/congress-statements.png" },
-    "role": "Words and interactive",
+    "role": "Words & interactive",
     "alt": "Interactive analysis of the language used in statements by members of Congress following mass shootings.",
     "info": "After the Parkland shooting, I wanted to find out how prevalent the widely mocked phrase &ldquo;thoughts and prayers&rdquo; actually was. So I used ProPublica&rsquo;s <a href='https://projects.propublica.org/api-docs/congress-api/'>Congress API</a> to find the text of more than 800 statements released by members of Congress in the aftermath of mass shootings. My analysis found that two-thirds of all the statements contain the word &ldquo;pray&rdquo; — and also that Marco Rubio is the only Republican ever to utter the words &ldquo;gun control&rdquo; after a mass shooting. As the final step of the interactive, a search interface lets users query the data themselves.",
     "url": "https://www.thetrace.org/2018/02/congress-members-statements-mass-shootings/"
@@ -124,7 +134,7 @@
     "category": "The Trace",
     "date": "February 2018",
     "image": { "src": "../img/bump-stock-comments.jpg" },
-    "role": "Words and graphics",
+    "role": "Words & graphics",
     "alt": "Chart showing the breakdown of 36,000 public comments posted in response to a proposed ban on bump stocks.",
     "info": "The public comment period for a proposed ATF regulation to regulate bump stocks as machine guns — effectively a ban — drew more than 36,000 comments. My colleague <a href='https://twitter.com/sean_kev'>Sean Campbell</a> and I scraped the text of these comments and, using a combination of Python scripts and hand-tagging, calculated the share of comments for and against the regulation, as well as the percent that were unique or form letters. We found that the responses were overwhelmingly opposed to the regulation, backing up previous <a href='https://www.thetrace.org/rounds/pro-gun-men-react-mass-shootings/'>research</a> which found that gun rights supporters are more politically engaged than their opponents.",
     "url": "https://www.thetrace.org/rounds/atf-bump-stock-regulation-comments-analysis/"
@@ -174,7 +184,7 @@
     "category": "The Phnom Penh Post",
     "date": "September 2016",
     "image": { "src": "../img/cambodia-flag-convenience.jpg" },
-    "role": "Words and graphics",
+    "role": "Words & graphics",
     "alt": "A map of a Cambodian ship's movements between China and North Korea.",
     "info": "Until 2016, Cambodia ran a flag of convenience program, under which foreign nationals could register their ships to fly the Cambodian flag. To investigate the program&rsquo;s shady history, I scraped GPS tracking data for hundreds of Cambodian-flagged vessels, which reporter <a href='https://twitter.com/jackoozell'>Jack Davies</a> and I combed through to identify ships that had called at ports in North Korea and Crimea. I also designed the article&rsquo;s maps.",
     "url": "http://www.phnompenhpost.com/national/history-crimes-ineptitude-cambodias-flag-convenience-scheme"
@@ -196,7 +206,7 @@
     "image": { "src": "../img/hun-family-business-empire.png" },
     "role": "Interactive",
     "alt": "Visualization of the business holdings of Cambodian Prime Minister Hun Sen's extended family.",
-    "info": "A Global Witness <a href='https://www.globalwitness.org/en/reports/hostile-takeover/'>report</a> detailing the vast business holdings of Hun Sen&lsquo;s extended family served as the basis for this interactive, my first ever D3 project. This article was also <a href='https://www.postkhmer.com/%E1%9E%96%E1%9F%90%E1%9E%8F%E1%9F%8C%E1%9E%98%E1%9E%B6%E1%9E%93%E1%9E%87%E1%9E%B6%E1%9E%8F%E1%9E%B7/%E1%9E%A2%E1%9E%B6%E1%9E%8E%E1%9E%B6%E1%9E%85%E1%9E%80%E1%9F%92%E1%9E%9A%E1%9E%87%E1%9F%86%E1%9E%93%E1%9E%BD%E1%9E%89%E1%9E%8F%E1%9F%92%E1%9E%9A%E1%9E%80%E1%9E%BC%E1%9E%9B-%E1%9E%A0%E1%9F%8A%E1%9E%BB%E1%9E%93-%E1%9E%8F%E1%9F%92%E1%9E%9A%E1%9E%BC%E1%9E%9C%E1%9E%94%E1%9E%B6%E1%9E%93%E1%9E%9B%E1%9E%B6%E1%9E%8F%E1%9E%8F%E1%9F%92%E1%9E%9A%E1%9E%8A%E1%9E%B6%E1%9E%84%E1%9E%8A%E1%9F%84%E1%9E%99-globalwitness'>published in Khmer</a>.",
+    "info": "A Global Witness <a href='https://www.globalwitness.org/en/reports/hostile-takeover/'>report</a> detailing the vast business holdings of Hun Sen&rsquo;s extended family served as the basis for this interactive, my first ever D3 project. This article was also <a href='https://www.postkhmer.com/%E1%9E%96%E1%9F%90%E1%9E%8F%E1%9F%8C%E1%9E%98%E1%9E%B6%E1%9E%93%E1%9E%87%E1%9E%B6%E1%9E%8F%E1%9E%B7/%E1%9E%A2%E1%9E%B6%E1%9E%8E%E1%9E%B6%E1%9E%85%E1%9E%80%E1%9F%92%E1%9E%9A%E1%9E%87%E1%9F%86%E1%9E%93%E1%9E%BD%E1%9E%89%E1%9E%8F%E1%9F%92%E1%9E%9A%E1%9E%80%E1%9E%BC%E1%9E%9B-%E1%9E%A0%E1%9F%8A%E1%9E%BB%E1%9E%93-%E1%9E%8F%E1%9F%92%E1%9E%9A%E1%9E%BC%E1%9E%9C%E1%9E%94%E1%9E%B6%E1%9E%93%E1%9E%9B%E1%9E%B6%E1%9E%8F%E1%9E%8F%E1%9F%92%E1%9E%9A%E1%9E%8A%E1%9E%B6%E1%9E%84%E1%9E%8A%E1%9F%84%E1%9E%99-globalwitness'>published in Khmer</a>.",
     "url": "http://www.phnompenhpost.com/national/inside-hun-familys-business-empire#interactive"
   },
   {
@@ -204,7 +214,7 @@
     "category": "The Phnom Penh Post",
     "date": "March 2016",
     "image": { "src": "../img/hun-sen-fb.jpg" },
-    "role": "Words and graphics",
+    "role": "Words & graphics",
     "alt": "Bar chart comparing Facebook likes of Hun Sen and Sam Rainsy.",
     "info": "In 2016, Cambodian Prime Minister Hun Sen was engaged in a Facebook popularity war with then-opposition leader Sam Rainsy. Using data from a social media <a href='https://www.socialbakers.com/statistics/facebook/pages/detail/111975152184324-samdech-hun-sen-cambodian-prime-minister'>analytics site</a>, I discovered that hundreds of thousands of the Prime Minister&rsquo;s Facebook likes had come from countries outside of Cambodia, such as India and the Philippines. The story sparked <a href='http://www.bbc.com/news/world-asia-35839701'>international</a> <a href='http://www.newsweek.com/cambodia-hun-sen-facebook-sam-rainsy-438294'>coverage</a> and led to a legal dispute that between Sam Rainsy and Hun Sen that is <a href='https://www.reuters.com/article/us-facebook-cambodia/facebook-runs-into-lawsuit-over-cambodian-politics-idUSKBN1FT1PB'>still ongoing</a>. This article was also <a href='https://www.postkhmer.com/%E1%9E%96%E1%9F%90%E1%9E%8F%E1%9F%8C%E1%9E%98%E1%9E%B6%E1%9E%93%E1%9E%87%E1%9E%B6%E1%9E%8F%E1%9E%B7/%E1%9E%A2%E1%9F%92%E1%9E%93%E1%9E%80%E1%9E%82%E1%9E%B6%E1%9F%86%E1%9E%91%E1%9F%92%E1%9E%9A%E1%9E%A0%E1%9F%92%E1%9E%9C%E1%9F%81%E1%9E%9F%E1%9E%94%E1%9F%8A%E1%9E%BB%E1%9E%80%E1%9E%93%E1%9E%B6%E1%9E%99%E1%9E%80%E1%9E%9A%E1%9E%8A%E1%9F%92%E1%9E%8B%E1%9E%98%E1%9E%93%E1%9F%92%E1%9E%8F%E1%9F%92%E1%9E%9A%E1%9E%B8-%E1%9E%8F%E1%9F%92%E1%9E%9A%E1%9E%BC%E1%9E%9C%E1%9E%94%E1%9E%B6%E1%9E%93%E1%9E%82%E1%9F%81%E1%9E%9A%E1%9E%80%E1%9E%83%E1%9E%BE%E1%9E%89%E1%9E%90%E1%9E%B6-%E1%9E%87%E1%9E%B6%E1%9E%84%E1%9E%96%E1%9E%B6%E1%9E%80%E1%9F%8B%E1%9E%80%E1%9E%8E%E1%9F%92%E1%9E%8A%E1%9E%B6%E1%9E%9B%E1%9E%98%E1%9E%B6%E1%9E%93%E1%9E%94%E1%9F%92%E1%9E%9A%E1%9E%97%E1%9E%96%E1%9E%98%E1%9E%80%E1%9E%96%E1%9E%B8%E1%9E%94%E1%9E%9A%E1%9E%91%E1%9F%81%E1%9E%9F'>published in Khmer</a>.",
     "url": "http://www.phnompenhpost.com/national/only-20-cent-pms-recent-facebook-likes-cambodia"
