--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-site",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "private": true,
   "scripts": {
     "build": "gatsby build",
@@ -10,35 +10,36 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-brands-svg-icons": "^5.9.0",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "gatsby": "^2.13.13",
-    "gatsby-image": "^2.2.4",
-    "gatsby-plugin-google-analytics": "^2.1.1",
-    "gatsby-plugin-layout": "^1.1.0",
-    "gatsby-plugin-manifest": "^2.2.1",
-    "gatsby-plugin-postcss": "^2.1.0",
-    "gatsby-plugin-purgecss": "^4.0.0",
-    "gatsby-plugin-react-helmet": "^3.1.0",
-    "gatsby-plugin-sharp": "^2.2.3",
-    "gatsby-source-filesystem": "^2.1.3",
-    "gatsby-transformer-json": "^2.2.0",
-    "gatsby-transformer-sharp": "^2.2.1",
-    "intersection-observer": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "gatsby": "^2.21.33",
+    "gatsby-image": "^2.4.3",
+    "gatsby-plugin-google-analytics": "^2.3.1",
+    "gatsby-plugin-layout": "^1.3.1",
+    "gatsby-plugin-manifest": "^2.4.3",
+    "gatsby-plugin-postcss": "^2.3.1",
+    "gatsby-plugin-preact": "^3.3.1",
+    "gatsby-plugin-purgecss": "^5.0.0",
+    "gatsby-plugin-react-helmet": "^3.3.1",
+    "gatsby-plugin-sharp": "^2.6.3",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
+    "gatsby-source-filesystem": "^2.3.3",
+    "gatsby-transformer-json": "^2.4.2",
+    "gatsby-transformer-sharp": "^2.5.2",
+    "intersection-observer": "^0.10.0",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
     "postcss-reporter": "^6.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
-    "react-transition-group": "^4.2.1",
-    "tachyons": "^4.11.1"
+    "preact": "^10.4.1",
+    "react-helmet": "^6.0.0",
+    "react-transition-group": "^4.4.1",
+    "tachyons": "^4.12.0"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^2.0.5"
   },
   "repository": {
     "type": "git",
