--- a/package.json
+++ b/package.json
@@ -10,31 +10,33 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.9",
-    "gatsby": "^2.21.33",
-    "gatsby-image": "^2.4.3",
-    "gatsby-plugin-google-analytics": "^2.3.1",
-    "gatsby-plugin-layout": "^1.3.1",
-    "gatsby-plugin-manifest": "^2.4.3",
-    "gatsby-plugin-postcss": "^2.3.1",
-    "gatsby-plugin-preact": "^3.3.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "gatsby": "^2.24.34",
+    "gatsby-image": "^2.4.14",
+    "gatsby-plugin-google-analytics": "^2.3.13",
+    "gatsby-plugin-layout": "^1.3.10",
+    "gatsby-plugin-manifest": "^2.4.22",
+    "gatsby-plugin-postcss": "^2.3.11",
+    "gatsby-plugin-preact": "^4.0.9",
     "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.3.1",
-    "gatsby-plugin-sharp": "^2.6.3",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-sharp": "^2.6.25",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-source-filesystem": "^2.3.3",
-    "gatsby-transformer-json": "^2.4.2",
-    "gatsby-transformer-sharp": "^2.5.2",
-    "intersection-observer": "^0.10.0",
+    "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-transformer-json": "^2.4.11",
+    "gatsby-transformer-sharp": "^2.5.12",
+    "intersection-observer": "^0.11.0",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
     "postcss-reporter": "^6.0.1",
-    "preact": "^10.4.1",
-    "react-helmet": "^6.0.0",
+    "preact": "^10.4.7",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-transition-group": "^4.4.1",
     "tachyons": "^4.12.0"
   },
