--- a/package.json
+++ b/package.json
@@ -10,38 +10,40 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "gatsby": "^2.24.34",
-    "gatsby-image": "^2.4.14",
-    "gatsby-plugin-google-analytics": "^2.3.13",
-    "gatsby-plugin-layout": "^1.3.10",
-    "gatsby-plugin-manifest": "^2.4.22",
-    "gatsby-plugin-postcss": "^2.3.11",
-    "gatsby-plugin-preact": "^4.0.9",
+    "gatsby": "^2.24.73",
+    "gatsby-image": "^2.4.21",
+    "gatsby-plugin-google-analytics": "^2.3.17",
+    "gatsby-plugin-layout": "^1.3.13",
+    "gatsby-plugin-manifest": "^2.4.34",
+    "gatsby-plugin-postcss": "^3.0.1",
+    "gatsby-plugin-preact": "^4.0.15",
     "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.25",
+    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-sharp": "^2.6.40",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-source-filesystem": "^2.3.24",
-    "gatsby-transformer-json": "^2.4.11",
-    "gatsby-transformer-sharp": "^2.5.12",
+    "gatsby-source-filesystem": "^2.3.34",
+    "gatsby-transformer-json": "^2.4.14",
+    "gatsby-transformer-sharp": "^2.5.17",
     "intersection-observer": "^0.11.0",
+    "postcss": "^8.1.1",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
-    "postcss-reporter": "^6.0.1",
-    "preact": "^10.4.7",
+    "postcss-reporter": "^7.0.1",
+    "preact": "^10.5.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-transition-group": "^4.4.1",
+    "smartquotes": "^2.3.1",
     "tachyons": "^4.12.0"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "^2.1.2"
   },
   "repository": {
     "type": "git",
